--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.dev.config.ts",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build:dev": "vite build --config vite.dev.config.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
